SimLang/src/test/resources/test/coco/invalid/MissingUnits.sim
sim MissingUnits {
  sim_render_frequency 60;
  map_name error.osm;
}